--- a/Online Real Estate/Master.css
+++ b/Online Real Estate/Master.css
@@ -1,6 +1,7 @@
-﻿h1 {
+﻿header {
     padding:10px;
     width:1330px;
-    background-color:lavender;
-    text-align:center
+    background-color:chocolate;
+    text-align:left;
+    font-family:Calibri;
 }
